--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vscode/codicons": "^0.0.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.5.2",
