--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.5.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
